--- a/BeingSeenApp/app/src/main/res/layout/activity_view_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_view_donation_goal.xml
@@ -5,86 +5,137 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ContentPage.ViewDonationGoalActivity">
+
     <RelativeLayout
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/green"
-        android:layout_marginBottom="300px"
+        android:layout_width="413dp"
+        android:layout_height="726dp"
+        android:background="@drawable/testbg4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintVertical_bias="0.077">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="470dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="152dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="104dp"
+            android:background="@drawable/pf_info_border"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/HyUsername"
+                android:layout_width="301dp"
+                android:layout_height="35dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="17dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="409dp"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:typeface="normal" />
+
+            <TextView
+                android:id="@+id/HyGoalTitle"
+                android:layout_width="303dp"
+                android:layout_height="48dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="23dp"
+                android:layout_marginBottom="363dp"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
 
+            <TextView
+                android:id="@+id/HyAmount"
+                android:layout_width="136dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="23dp"
+                android:layout_marginTop="110dp"
+                android:layout_marginEnd="192dp"
+                android:layout_marginBottom="301dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintVertical_bias="0.132" />
+
+            <TextView
+                android:id="@+id/HyPercentage"
+                android:layout_width="139dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="190dp"
+                android:layout_marginTop="110dp"
+                android:layout_marginEnd="22dp"
+                android:layout_marginBottom="299dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintVertical_bias="0.132" />
+
+            <TextView
+                android:id="@+id/HyGoalDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="265dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="163dp"
+                android:layout_marginEnd="23dp"
+                android:layout_marginBottom="23dp"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:typeface="normal" />
+
+
+            <ProgressBar
+                android:id="@+id/HyProgressBar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginEnd="33dp"
+                android:layout_marginBottom="350dp"
+                app:layout_constraintVertical_bias="0.019" />
+
+        </RelativeLayout>
     </RelativeLayout>
-
-
-    <TextView
-        android:id="@+id/HyUsername"
-        android:layout_width="295dp"
-        android:layout_height="51dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.175" />
-
-    <TextView
-        android:id="@+id/HyGoalTitle"
-        android:layout_width="301dp"
-        android:layout_height="49dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.261" />
-
-    <TextView
-        android:id="@+id/HyAmount"
-        android:layout_width="145dp"
-        android:layout_height="57dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.356" />
-
-    <TextView
-        android:id="@+id/HyPercentage"
-        android:layout_width="145dp"
-        android:layout_height="57dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.781"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.356" />
-
-    <TextView
-        android:id="@+id/HyGoalDescription"
-        android:layout_width="348dp"
-        android:layout_height="160dp"
-        android:textAlignment="textStart"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.567" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
