--- a/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
@@ -26,6 +26,7 @@
         android:layout_height="568dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#DDEEDF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
