--- a/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     <TextView
         android:id="@+id/plain_text_recycler_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,37 +32,29 @@
         android:layout_width="144dp"
         android:layout_height="71dp"
         android:text="TextView"
-        android:textAlignment="viewStart"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/transactions_amount_recycler_item"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_gravity="right"/>
 
-    <TextView
-        android:id="@+id/transactions_amount_recycler_item"
-        android:layout_width="155dp"
-        android:layout_height="65dp"
-        android:text="TextView"
-        android:textAlignment="viewStart"
-        android:textColor="#03A9F4"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.195"
-        app:layout_constraintStart_toStartOf="@+id/plain_text_recycler_item_text"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/transactions_amount_recycler_item"
+            android:layout_width="155dp"
+            android:layout_height="65dp"
+            android:text="TextView"
+            android:textColor="#03A9F4"
+            android:textSize="24sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_gravity="left"/>
 
-    <TextView
-        android:id="@+id/no_transaction_recycler_tiem"
-        android:layout_width="282dp"
-        android:layout_height="61dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/plain_text_recycler_item_text"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        <TextView
+            android:id="@+id/no_transaction_recycler_tiem"
+            android:layout_width="375dp"
+            android:layout_height="61dp"
+            android:text="TextView"
+            android:layout_marginTop="5dp"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
