--- a/BeingSeenApp/app/src/main/res/layout/activity_show_youth_list.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_show_youth_list.xml
@@ -51,6 +51,23 @@
         app:layout_constraintTop_toBottomOf="@+id/ml_ititle"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/no_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="400dp"
+        android:text="No matching result found"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ml_input"
+        app:layout_constraintVertical_bias="0.0" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ml_list"
         android:layout_width="0dp"
