--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
@@ -160,4 +160,16 @@
         </RelativeLayout>
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/ButtonConvertCash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CASH CONVERSION"
+        app:layout_constraintBottom_toBottomOf="@+id/MerPfBalanceFrag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
