--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
@@ -135,12 +135,12 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="283dp"
+                android:layout_marginTop="303dp"
                 android:layout_marginEnd="180dp"
                 android:layout_marginBottom="44dp"
                 android:text="N/A"
                 android:textColor="@color/green"
-                android:textSize="70dp" />
+                android:textSize="55dp" />
 
             <TextView
                 android:id="@+id/textCreditUnit"
@@ -159,5 +159,17 @@
                 android:textSize="20dp" />
         </RelativeLayout>
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/ButtonConvertCash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CASH CONVERSION"
+        app:layout_constraintBottom_toBottomOf="@+id/MerPfBalanceFrag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
